# OmniChat

./: README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
Chatapp/: admin.py  apps.py  models.py  views.py
Chatapp/static/css/: bootstrap.min.css
Chatapp/templates/Chatapp/: index.html  signin.html  signup.html
OmniChat/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
staticfiles/css/: bootstrap.min.css.br  custom.css  custom.css.br  signin.3d520ad96d53.css.br  signup.e81848a7a697.css.br  styles.css  styles.css.br
staticfiles/js/: custom.6be4210244e0.js  custom.6be4210244e0.js.br  scripts.bc2e133c4c83.js  scripts.bc2e133c4c83.js.br
