[tool.poetry]
name = "OmniChat"
version = "0.1.0"
description = "A high-level Python web framework that encourages rapid development and clean, pragmatic design."
authors = ["varunpandey2106 <varun.pandey2020@vitstudent.ac.in>"]

[tool.poetry.dependencies]
python = "3"
django = "4.2.3"
gunicorn = "21.2.0"



